# quant-factor-backtest-cpp-python

./: .gitignore  test_cpp_interface.py
cpp_core/: CMakeLists.txt
cpp_core/Release/: factor_core.pyd
cpp_core/src/: compute_factors.cpp
data/: 000001_20250928_175537.csv  000002_20250928_175537.csv  000063_20250928_175537.csv  000100_20250928_175537.csv  000157_20250928_175537.csv  000166_20250928_175537.csv  000301_20250928_175537.csv  000333_20250928_175537.csv  000338_20250928_175537.csv  000425_20250928_175537.csv  000538_20250928_175537.csv  000568_20250928_175537.csv  000596_20250928_175537.csv  000617_20250928_175537.csv  000625_20250928_175537.csv  000651_20250928_175537.csv  000661_20250928_175537.csv  000708_20250928_175537.csv  000725_20250928_175537.csv  000768_20250928_175537.csv  000776_20250928_175537.csv  000786_20250928_175537.csv  000792_20250928_175537.csv  000858_20250928_175537.csv  000876_20250928_175537.csv  000877_20250928_175537.csv  000895_20250928_175537.csv  000938_20250928_175537.csv  000963_20250928_175537.csv  000975_20250928_175537.csv  000977_20250928_175537.csv  000983_20250928_175537.csv  000999_20250928_175537.csv  001289_20250928_175537.csv  001872_20250928_175537.csv  001965_20250928_175537.csv  001979_20250928_175537.csv  002001_20250928_175537.csv  002027_20250928_175537.csv  002028_20250928_175537.csv  (+10 more)
python_core/: config.py  main.py
python_core/backtest/: engine.py
python_core/factors/: factor_factory.py  factors.py  momentum.py  volatility.py  volume_ratio.py
python_core/strategy/: multi_factor_strategy.py
(+3 files in other folders)
